<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycle_item"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_margin="20dp"
    android:elevation="10dp">

    <ImageView
        android:id="@+id/m_image"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="centerCrop"></ImageView>

    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginTop="200dp"
        android:scaleType="centerCrop"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="125dp"
        android:layout_height="46dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:scaleType="centerCrop"
        android:text="TextView"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/Cost"
        android:layout_width="87dp"
        android:layout_height="32dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/eventID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741" />

    <!--    <TextView-->
    <!--        android:id="@+id/DestCoord"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="132dp"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:text="TextView"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.136" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/eventDescription"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="336dp"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:text="TextView"-->
    <!--        android:typeface="normal"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="1.0" />-->
</androidx.cardview.widget.CardView>