...
android:layout_height="match_parent"
tools:context=".LoginPage">

<!--text view for heading-->A

<Button
    android:id="@+id/idBtnLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="10dp"
    android:text="Login"
    android:textAllCaps="false"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/idEdtPassword" />

<!--edit text for user name-->
<TextView
...
