...
<!--        android:name="com.google.android.gms.maps.SupportMapFragment"-->
<!--        android:layout_width="412dp"-->
<!--        android:layout_height="507dp" />-->


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
...
                android:layout_height="493dp"
                android:layout_gravity="center_horizontal"

                android:layout_marginEnd="0dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="498dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.448"
                app:layout_constraintStart_toStartOf="parent"
...
